force-app/main/default/objects/Daily_KPIs__c/Daily_KPIs__c.object-meta.xml
<CustomObject>
    <label>Daily KPIs</label>
    <nameField>
        <displayFormat>KPI-{000000}</displayFormat>
        <label>Daily KPIs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily KPIs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>