force-app/main/default/objects/Daily_KPIs__c/fields/Avg_Order_Value_MTD__c.field-meta.xml
<CustomField>
    <fullName>Avg_Order_Value_MTD__c</fullName>
    <label>Avg Order Value MTD</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>