force-app/main/default/objects/Daily_KPIs__c/fields/Avg_talk_Time_Per_BDE__c.field-meta.xml
<CustomField>
    <fullName>Avg_talk_Time_Per_BDE__c</fullName>
    <label>Avg talk Time Per BDE</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>