force-app/main/default/objects/Daily_KPIs__c/fields/Called_Percentage_V1__c.field-meta.xml
<CustomField>
    <fullName>Called_Percentage_V1__c</fullName>
    <formula>Called_Leads__c  /  Total_Leads__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Called Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>