force-app/main/default/objects/Daily_KPIs__c/fields/Connect_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Connect_Conversion__c</fullName>
    <label>Connect Conversion</label>
    <summarizedField>Daily_KPIs_By_Course__c.Connect_Conversion__c</summarizedField>
    <summaryForeignKey>Daily_KPIs_By_Course__c.Daily_KPIs__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>