force-app/main/default/objects/Daily_KPIs__c/fields/Connected_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Connected_Percentage__c</fullName>
    <label>Connected Percentage</label>
    <summarizedField>Daily_KPIs_By_Course__c.Connected_Percentage__c</summarizedField>
    <summaryForeignKey>Daily_KPIs_By_Course__c.Daily_KPIs__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>