force-app/main/default/objects/Daily_KPIs__c/fields/Connected_Percentage_V1__c.field-meta.xml
<CustomField>
    <fullName>Connected_Percentage_V1__c</fullName>
    <formula>Connected_Leads__c /  Called_Leads__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Connected Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>