force-app/main/default/objects/Daily_KPIs__c/fields/Conversion_Unique_Connected__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Unique_Connected__c</fullName>
    <label>Conversion Unique Connected</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>