force-app/main/default/objects/Daily_KPIs__c/fields/Effective_Talk_Time_AHT__c.field-meta.xml
<CustomField>
    <fullName>Effective_Talk_Time_AHT__c</fullName>
    <label>Effective Talk Time - AHT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>