force-app/main/default/objects/Daily_KPIs__c/fields/Fresh_Leads_Created_Today__c.field-meta.xml
<CustomField>
    <fullName>Fresh_Leads_Created_Today__c</fullName>
    <label>Fresh Leads Created Today</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>