force-app/main/default/objects/Daily_KPIs__c/fields/Inbound_Calls__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Calls__c</fullName>
    <label>Inbound Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>