force-app/main/default/objects/Daily_KPIs__c/fields/No_Of_BDE_s_Active__c.field-meta.xml
<CustomField>
    <fullName>No_Of_BDE_s_Active__c</fullName>
    <label>No Of BDE&apos;s Active</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>