force-app/main/default/objects/Daily_KPIs__c/fields/No_of_Orders__c.field-meta.xml
<CustomField>
    <fullName>No_of_Orders__c</fullName>
    <label>No of Orders</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>