force-app/main/default/objects/Daily_KPIs__c/fields/Not_Checkedin__c.field-meta.xml
<CustomField>
    <fullName>Not_Checkedin__c</fullName>
    <label>Not Checkedin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>