force-app/main/default/objects/Daily_KPIs__c/fields/Order_Projection__c.field-meta.xml
<CustomField>
    <fullName>Order_Projection__c</fullName>
    <label>Order Projection</label>
    <summarizedField>Daily_KPIs_By_Course__c.Order_Projection__c</summarizedField>
    <summaryForeignKey>Daily_KPIs_By_Course__c.Daily_KPIs__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>