force-app/main/default/objects/Daily_KPIs__c/fields/Orders_Today__c.field-meta.xml
<CustomField>
    <fullName>Orders_Today__c</fullName>
    <label>Orders Today</label>
    <summarizedField>Daily_KPIs_By_Course__c.Order_made_Today__c</summarizedField>
    <summaryForeignKey>Daily_KPIs_By_Course__c.Daily_KPIs__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>