force-app/main/default/objects/Daily_KPIs__c/fields/Outbound_Calls__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Calls__c</fullName>
    <label>Outbound Calls</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>