force-app/main/default/objects/Daily_KPIs__c/fields/Revenue_BDE_30__c.field-meta.xml
<CustomField>
    <fullName>Revenue_BDE_30__c</fullName>
    <label>Revenue / BDE *30</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>