force-app/main/default/objects/Daily_KPIs__c/fields/Revenue_By_BDE_MTD__c.field-meta.xml
<CustomField>
    <fullName>Revenue_By_BDE_MTD__c</fullName>
    <label>Revenue By BDE MTD</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>