force-app/main/default/objects/Daily_KPIs__c/fields/Revenue_Per_BD__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Per_BD__c</fullName>
    <label>Revenue Per BD</label>
    <summarizedField>Daily_KPIs_By_Course__c.Revenue_BD__c</summarizedField>
    <summaryForeignKey>Daily_KPIs_By_Course__c.Daily_KPIs__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>