force-app/main/default/objects/Daily_KPIs__c/fields/Revenue_Projection__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Projection__c</fullName>
    <label>Revenue Projection</label>
    <summarizedField>Daily_KPIs_By_Course__c.Revenue_Projection__c</summarizedField>
    <summaryForeignKey>Daily_KPIs_By_Course__c.Daily_KPIs__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>