force-app/main/default/objects/Daily_KPIs__c/fields/Total_call_Duration__c.field-meta.xml
<CustomField>
    <fullName>Total_call_Duration__c</fullName>
    <label>Total call Duration</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>