force-app/main/default/objects/Daily_KPIs__c/fields/Total_Calls_Made__c.field-meta.xml
<CustomField>
    <fullName>Total_Calls_Made__c</fullName>
    <label>Total Calls Made</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>