force-app/main/default/objects/Daily_KPIs__c/fields/Total_connected__c.field-meta.xml
<CustomField>
    <fullName>Total_connected__c</fullName>
    <label>Total connected</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>