force-app/main/default/objects/Daily_KPIs__c/fields/Total_Leads__c.field-meta.xml
<CustomField>
    <fullName>Total_Leads__c</fullName>
    <label>Total Leads</label>
    <summarizedField>Daily_KPIs_By_Course__c.Total_Leads__c</summarizedField>
    <summaryForeignKey>Daily_KPIs_By_Course__c.Daily_KPIs__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>