force-app/main/default/objects/Daily_KPIs__c/fields/Total_Orders__c.field-meta.xml
<CustomField>
    <fullName>Total_Orders__c</fullName>
    <label>Total Orders From Today Created Lead</label>
    <summarizedField>Daily_KPIs_By_Course__c.Orders__c</summarizedField>
    <summaryForeignKey>Daily_KPIs_By_Course__c.Daily_KPIs__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>