force-app/main/default/objects/Daily_KPIs__c/fields/Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue__c</fullName>
    <label>Total Revenue From Todays Created Lead</label>
    <summarizedField>Daily_KPIs_By_Course__c.Revenue__c</summarizedField>
    <summaryForeignKey>Daily_KPIs_By_Course__c.Daily_KPIs__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>