force-app/main/default/objects/Daily_KPIs__c/fields/Total_TT_Connected__c.field-meta.xml
<CustomField>
    <fullName>Total_TT_Connected__c</fullName>
    <label>Total TT Connected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>