force-app/main/default/objects/Daily_KPIs__c/fields/Unique_Leads_called__c.field-meta.xml
<CustomField>
    <fullName>Unique_Leads_called__c</fullName>
    <label>Unique Leads called</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>