force-app/main/default/objects/Daily_KPIs__c/fields/X7_days_No_Admission__c.field-meta.xml
<CustomField>
    <fullName>X7_days_No_Admission__c</fullName>
    <label>7 days No Admission</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>