force-app/main/default/objects/Daily_KPIs__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Total_Leads__c</columns>
    <columns>Called_Leads__c</columns>
    <columns>Unique_Leads_called__c</columns>
    <columns>Total_Unique_Connected__c</columns>
    <columns>Orders_Today__c</columns>
    <columns>Lead_Conversion__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>